# SEMToComsol

./: pyproject.toml
output_contours/: pores.dxf
src/sem_image_processing/: __init__.py  config.py  contours.py  export.py  io.py  main.py  models.py  preprocess.py  segmentation.py  spline.py
