[project]
name = "sem-image-processing"
version = "0.1.0"
description = "Convert SEM images to parameterized COMSOL geometries"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "ezdxf>=1.4.4",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "opencv-python>=5.0.0.93",
    "scikit-image>=0.26.0",
    "scipy>=1.18.0",
    "shapely>=2.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sem_image_processing"]